# ChangeLog for x11-plugins/matchbox-desktop-image-browser
# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
# $Header: /usr/local/ssd/gentoo-x86/output/x11-plugins/cvs-repo/gentoo-x86/x11-plugins/matchbox-desktop-image-browser/ChangeLog,v 1.9 2012/03/05 11:10:00 tomka Exp $

  05 Mar 2012; Thomas Kahle <tomka@gentoo.org>
  matchbox-desktop-image-browser-0.2-r1.ebuild:
  marked x86 per bug 309407

  04 Mar 2012; Pacho Ramos <pacho@gentoo.org> metadata.xml:
  Drop maintainer due retirement, bug #112268

  21 Feb 2012; Agostino Sarubbo <ago@gentoo.org>
  matchbox-desktop-image-browser-0.2-r1.ebuild:
  Stable for amd64, wrt bug #309407

*matchbox-desktop-image-browser-0.2-r1 (06 Jan 2010)

  06 Jan 2010; Yuri Vasilevski <yvasilev@gentoo.org>
  +matchbox-desktop-image-browser-0.2-r1.ebuild,
  +files/matchbox-desktop-image-browser-0.2-plugin-location-fix.patch:
  Fixed the installation path for the dynamically loadable mb-desktop
  module. Bug #298871, thanks flameeyes for reporting.

  06 Jan 2010; Yuri Vasilevski <yvasilev@gentoo.org>
  matchbox-desktop-image-browser-0.2.ebuild,
  +files/matchbox-desktop-image-browser-0.2-noexec-matchbox-desktop.patch:
  Removed the unneeded execution of matchbox-desktop during ./configure,
  thanks miknix for noticing.

  29 Dec 2009; Angelo Arrifano <miknix@gentoo.org>
  matchbox-desktop-image-browser-0.2.ebuild:
  QA: Fix dodoc of missing file (bug #298870).
  Add missing RDEPEND.

  14 Mar 2009; <solar@gentoo.org> matchbox-desktop-image-browser-0.2.ebuild:
  keyword ~amd64

  27 Feb 2008; Yuri Vasilevski <yvasilev@gentoo.org>
  matchbox-desktop-image-browser-0.2.ebuild:
  Updated HOMEPAGE and SRC_URI to it's new location
  http://matchbox-project.org/ (Bug #211244).

*matchbox-desktop-image-browser-0.2 (04 Jun 2006)

  04 Jun 2006; <yvasilev@gentoo.org>
  +files/matchbox-desktop-image-browser-0.2-include_fix.patch,
  +metadata.xml, +matchbox-desktop-image-browser-0.2.ebuild:
  Initial Import.
