@@ -6,13 +6,13 @@ AUX matchbox-desktop-image-browser-0.2-noexec-matchbox-desktop.patch 541 RMD160 
 AUX matchbox-desktop-image-browser-0.2-plugin-location-fix.patch 1318 RMD160 d5f2a00f9e6e6239b28717c7278a29db8291549f SHA1 0033544df3ea48a96e78d25eb60ab453b82aed54 SHA256 cdeb4538d2057db7acc73ba56ddbaed901d3cb70490080452f9dc551026a5d63
 DIST mb-desktop-image-browser-0.2.tar.bz2 209777 RMD160 5ecdad5c1cbd6ba2647bb3c375e74f78a1cdebd3 SHA1 5c9e2fde3aa60ee2e0c62f163ad78df145a786ef SHA256 48c2721048d3fa0bde425df1b40b1baa4ae67f6e42be78761ae81deb39ec746e
 EBUILD matchbox-desktop-image-browser-0.2-r1.ebuild 1508 RMD160 5423afedeb3a39d43d799843a3362fbbdb98acb3 SHA1 5bdfb3a7dd91d35ba05044f44a85edcacaa8faea SHA256 965458726c25e2c46b1ae5ce17a038551b032061a1d77b7937f7dee44b9b5364
-EBUILD matchbox-desktop-image-browser-0.2.ebuild 1134 RMD160 a6c9a5077ab6f7d1a60e7e2ed24c28dc2de3db55 SHA1 666d04945149e9d88680fc5df29c059d2b499b7a SHA256 f38c21a041c30b0661089b4aa465eeb0616ac08f297fab92efdf89e0ac8ac071
-MISC ChangeLog 1941 RMD160 55c240362677df741a6d2beed9ff826062729b32 SHA1 883ef389cf52b0ea1cb90a647cd3bdf6a77eb2a4 SHA256 a6a641dcb0c0772cecd0b1ef93f0b34c7e4e1ffccede4cfc01d4fb410dbf32fb
+EBUILD matchbox-desktop-image-browser-0.2.ebuild 1134 RMD160 66b60ef229b96846c8a501497dc55fe972f006e2 SHA1 0fc12be3c5e476d7051a37be4cf3266e06358510 SHA256 b8a462cf942268c4c909618c8fc61e7dc050230bef8694fead6649dff2b3e18d
+MISC ChangeLog 2059 RMD160 5924b7d463209565033fe4387a49b261ed617820 SHA1 0c66063622d83c9de9d1a08b968a6a0641a54349 SHA256 64e92488c484a58b7c4b9d95a8dbf22519331fbdef3d52d3720b1875518ee1be
 MISC metadata.xml 156 RMD160 ad7ad0ec78b44cd7004c2eb4711447f65b093a90 SHA1 c7f22cbdb8af8694f088d8516f669543219403b0 SHA256 accc099ad19ed213f794a97e46489784b37a5f24756f44592d937da0d11c7ff0
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.17 (GNU/Linux)
 
-iF4EAREIAAYFAk9Unw4ACgkQodBTJSDyo676mAD/Z4q/OFF1m5L/2ohTheICFOgb
-bQJtpZaoOAtmUeNQ7cgA+wWrMQS12PXOuSEo8K8f6GE6GhXteWfIZL24sUE4nFmB
-=DcV1
+iF4EAREIAAYFAk/MBYYACgkQknrdDGLu8JCvVAD/XTuWPtd7Q4+WiLjVU38aGl4/
+GaNsm3iByxjpzMq5fYUA/2Mw0iOJfeLnmzQWN8TqgsU0ClXdIShLqmO3AwWgk1wG
+=efz2
 -----END PGP SIGNATURE-----
