@@ -1,6 +1,10 @@
 # ChangeLog for x11-plugins/matchbox-desktop-image-browser
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/x11-plugins/cvs-repo/gentoo-x86/x11-plugins/matchbox-desktop-image-browser/ChangeLog,v 1.9 2012/03/05 11:10:00 tomka Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/x11-plugins/cvs-repo/gentoo-x86/x11-plugins/matchbox-desktop-image-browser/ChangeLog,v 1.10 2012/06/04 00:47:26 xmw Exp $
+
+  04 Jun 2012; Michael Weber <xmw@gentoo.org>
+  matchbox-desktop-image-browser-0.2.ebuild:
+  adding ~ppc (bug 309407)
 
   05 Mar 2012; Thomas Kahle <tomka@gentoo.org>
   matchbox-desktop-image-browser-0.2-r1.ebuild:
